<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_header_layout"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_item_tag1"
            style="@style/MenuItemLayoutStyle">

            <ImageView
                style="@style/MenuItemImageViewStyle"
                android:background="@mipmap/icon_slid_menu_3"
                android:contentDescription="@null" />

            <TextView
                style="@style/MenuItemTextViewStyle"
                android:text="@string/menu_item_news" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_item_tag2"
            style="@style/MenuItemLayoutStyle">

            <ImageView
                style="@style/MenuItemImageViewStyle"
                android:background="@mipmap/icon_slid_menu_1"
                android:contentDescription="@null" />

            <TextView
                style="@style/MenuItemTextViewStyle"
                android:text="@string/menu_item_blog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_item_tag3"
            style="@style/MenuItemLayoutStyle">

            <ImageView
                style="@style/MenuItemImageViewStyle"
                android:background="@mipmap/xitu_logo"
                android:contentDescription="@null" />

            <TextView
                style="@style/MenuItemTextViewStyle"
                android:text="@string/menu_item_xitu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_item_tag4"
            style="@style/MenuItemLayoutStyle">

            <ImageView
                style="@style/MenuItemImageViewStyle"
                android:background="@mipmap/icon_slid_menu_4"
                android:contentDescription="@null" />

            <TextView
                style="@style/MenuItemTextViewStyle"
                android:text="@string/menu_item_component_lib" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/menu_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/def_zone_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.inventec.newsblog.widget.RoundImageView
            android:id="@+id/menu_header"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter" />
    </RelativeLayout>

</RelativeLayout>