<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_16dp"
        android:weightSum="4"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_10dp"
            android:layout_weight="1"
            android:textSize="@dimen/material_24sp"
            tools:text="北京" />

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/material_10dp"
            android:layout_marginRight="@dimen/material_10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:maxHeight="@dimen/material_128dp"
            android:maxWidth="@dimen/material_128dp"
            android:src="@mipmap/ic_weather_sunny" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/material_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/material_20sp"
                tools:text="晴" />

            <TextView
                android:layout_marginTop="@dimen/material_8dp"
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/material_20sp"
                tools:text="10℃" />
            <TextView
                android:id="@+id/tv_temperature_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_8dp"
                android:textSize="@dimen/material_20sp"
                tools:text="13:30" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_aqi"
        style="@style/WeatherInfoTextStyle"
        android:drawableLeft="@mipmap/ic_api"
        android:drawablePadding="@dimen/material_16dp"
        tools:text="@string/weather_dialog_aqi" />

    <TextView
        android:id="@+id/tv_sd"
        style="@style/WeatherInfoTextStyle"
        android:drawableLeft="@mipmap/ic_sd"
        android:drawablePadding="@dimen/material_16dp"
        tools:text="@string/weather_dialog_sd" />

    <TextView
        android:id="@+id/tv_wind_direction"
        style="@style/WeatherInfoTextStyle"
        android:drawableLeft="@mipmap/ic_wind_direction"
        android:drawablePadding="@dimen/material_16dp"
        tools:text="@string/weather_dialog_wind_direction" />

    <TextView
        android:id="@+id/tv_wind_power"
        style="@style/WeatherInfoTextStyle"
        android:drawableLeft="@mipmap/ic_wind_power"
        android:drawablePadding="@dimen/material_16dp"
        tools:text="@string/weather_dialog_wind_power" />

</LinearLayout>